--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,5 +1,12 @@
 .Player {
-  padding: 10px;
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Player__score {
+  display: grid;
+  gap: 5px;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
 }
