--- a/src/components/PlayerForm/PlayerForm.css
+++ b/src/components/PlayerForm/PlayerForm.css
@@ -1,9 +1,4 @@
-.PlayerForm {
-  padding: 10px;
-  display: grid;
-}
-
-.label {
-  display: grid;
-  gap: 10px;
+.PlayerForm input {
+  border: 2px solid #bbb;
+  width: 100%;
 }
